--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,10 @@
 # Ignore bundler config.
 /.bundle
 
+# Ignore files with secrets
+/.env
+config/secrets.yml
+
 # Ignore all logfiles and tempfiles.
 /log/*
 /tmp/*
